<resources>
    <string name="app_name"></string>

    <!-- Base activity -->
    <string name="learn_main"> LEARN </string>
    <string name="practice_main"> PRACTICE </string>
    <string name="video_tutorials"> VIDEO TUTORIALS </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--LEARN Button-->
    <!--LEARN-->
    <string name="basics"> BASICS </string>
    <string name="classes">CLASSES AND OBJECTS </string>
    <string name="functions_lambdas">FUNCTIONS AND LAMBDAS</string>
    <string name="mp"> MULTIPLATFORM PROGRAMMING </string>
    <string name="others">OTHERS </string>


    <!-- Basics-->
    <string name="basics_basicTypes">BASIC TYPES </string>
    <string name="basics_packages_and_imports">PACKAGES AND IMPORTS </string>
    <string name="control_flow"> CONTROL FLOW </string>
    <string name="returns_jumps">RETURNS AND JUMPS </string>


    <!--CLASSES AND OBJECTS -->
    <string name="co_classes_inheritance">Classes and Inheritance</string>
    <string name="co_properties_fields">Properties and Fields</string>
    <string name="co_interfaces">Interfaces </string>
    <string name="co_visibility_modifiers">Visibility Modifiers</string>
    <string name="co_extensions">Extensions</string>
    <string name="co_data_classes">Data Classes </string>
    <string name="co_seated_classes">Sealed Classes</string>
    <string name="co_generics">Generics</string>
    <string name="co_nested">Nested Classes</string>
    <string name="co_enum">Enum Classes</string>
    <string name="co_objects">Objects</string>
    <string name="co_inline_classes">Inline Classes</string>
    <string name="delegation">Delegation</string>
    <string name="delegated_properties">Delegated Properties</string>

    <!-- functions and lambdas-->
    <string name="functions">Functions </string>
    <string name="lambdas">Lambdas </string>
    <string name="inline_functions">Inline Functions</string>

    <!--MULTIPLATFORM PROGRAMMING -->
    <string name="mp_psd">Platform Specific Declarations </string>
    <string name="mp_bg">Building with Gradle </string>

    <!--OTHERS -->
    <string name="ot_declarations">DESTRUCTURING DECLARATIONS</string>
    <string name="ot_cpllections">COLLECTIONS</string>
    <string name="ot_ranges">RANGES</string>
    <string name="ot_tcc">TYPE CHECKS AND CASTS</string>
    <string name="ot_this">This Expressions </string>
    <string name="ot_equality">Equality</string>
    <string name="ot_operator_overloading">Operator Overloading </string>
    <string name="ot_null_safety">Null Safety</string>
    <string name="ot_exceptions">Exceptions </string>
    <string name="ot_annotations">Anotations </string>
    <string name="ot_reflection">Reflection </string>
    <string name="ot_type_safe_builders">Type Safe Builders </string>
    <string name="ot_type_aliases">Type Aliases </string>

    <!--MENU ITEMS -->
    <string name="share">Share Progress </string>
    <string name="share_g">Share on Google</string>
    <string name="log_out">Log Out</string>
    <string name="my_account">My Account</string>
    <string name="upload">Upload on Google Drive</string>
    <string name="login">Login with Google</string>


    <!-- TUTORIAL ACTIVITY MAIN PAGE -->
    <string name="tut_main_programming_beginner"> Beginner Videos </string>
    <string name="tut_main_pure_kotlin"> Complete Kotlin Guide </string>
    <string name="tut_main_kotlin_android"> Use Kotlin For Android Applications</string>
    <string name="tut_main_kotlin_fire_base">Fire Base Tutorials</string>
    <string name="tut_main_kotlin_ml_kit">Applying Machine Learning to Applications</string>
    <string name="title_activity_accout">AccoutActivity</string>

    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

</resources>
