<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Learn_Classes_Objects"
    android:id="@+id/DrawerLayout_SideBar">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimaryDark"
            tools:context=".Learn_Classes_Objects">




            <Button
                android:id="@+id/co_classes_inheritance_but"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="50dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/co_classes_inheritance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/co_properties_fields_but"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="40dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/co_properties_fields"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_classes_inheritance_but" />



            <Button
                android:id="@+id/co_interfaces_but"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="50dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/co_interfaces"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_properties_fields_but" />

            <Button
                android:id="@+id/co_visibility_modifiers_but"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="40dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/co_visibility_modifiers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_interfaces_but" />

            <Button
                android:id="@+id/co_extensions_but"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="50dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/co_extensions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_visibility_modifiers_but" />

            <Button
                android:id="@+id/co_data_classes_but"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="50dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/co_data_classes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_extensions_but" />

            <Button
                android:id="@+id/co_sealed_classes_but"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="50dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/co_seated_classes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_data_classes_but" />

            <Button
                android:id="@+id/co_generics_but"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="50dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/co_generics"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_sealed_classes_but" />

            <Button
                android:id="@+id/co_nested_classes_but"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="40dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/co_nested"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_generics_but" />

            <Button
                android:id="@+id/co_enums_but"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="50dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/co_enum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_nested_classes_but" />

            <Button
                android:id="@+id/co_objects"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="50dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/co_objects"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_enums_but" />

            <Button
                android:id="@+id/co_inline_classes"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="40dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/co_inline_classes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_objects" />

            <Button
                android:id="@+id/co_delegation"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="50dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/delegation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_inline_classes" />

            <Button
                android:id="@+id/co_delegated_properties"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="40dp"
                android:padding="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/delegated_properties"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_delegation" />

            <Button
                android:id="@+id/back_but_classes_objects"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co_delegated_properties" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>




    <android.support.design.widget.NavigationView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>