<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseActivity"
    android:id="@+id/DrawerLayout_SideBar">


    <!-- CONTENT ON THE SCREEN AND INSIDE THE SCROLL VIEW-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/learn_main"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:text="@string/learn_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/practice_main_but"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimaryDark"
                android:text="@string/practice_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/video_tutorials_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:text="@string/video_tutorials"
                android:textStyle="bold" />

            <Button
                android:id="@+id/textEditor"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimaryDark"
                android:text="EDITOR"
                android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/navdrawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:drawSelectorOnTop="false">
    </ListView>
    <!-- <android.support.design.widget.NavigationView
         android:id="@+id/navigationView"
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         app:menu="@menu/navigation_menu"
         android:layout_gravity="start">
     </android.support.design.widget.NavigationView> -->

 </android.support.v4.widget.DrawerLayout>